--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #e9f2f0;
+  --second: #257f71;
 }
 
 ::-webkit-scrollbar {
@@ -40,6 +42,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  primary_bg: var(--primary);
+  second_bg: var(--second);
 }
 
 @layer utilities {
